--- a/UntitledDBusUtils.pc.in
+++ b/UntitledDBusUtils.pc.in
@@ -2,6 +2,7 @@ prefix="@CMAKE_INSTALL_PREFIX@"
 exec_prefix="${prefix}"
 libdir="${prefix}/lib"
 includedir="${prefix}/include"
+compile_defs="@compile_defs@"
 
 Name: @PROJECT_NAME@
 Description: Additional utilities for dealing with libdbus-1
