--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,8 @@ target_include_directories(UntitledDBusUtils PUBLIC ${DBUS_INCLUDE_DIRS})
 target_compile_definitions(UntitledDBusUtils PUBLIC UIMGUI_DBUS_SUBMODULE_ENABLED)
 list(APPEND compile_defs "UIMGUI_DBUS_SUBMODULE_ENABLED")
 foreach (A IN LISTS DBUS_INCLUDE_DIRS)
-    string(APPEND dbus_dirs " -I${A}")
+    string(APPEND dbus_dirs_i " -I${A}")
+    string(APPEND dbus_dirs " ${A}")
 endforeach()
 
 configure_file(UntitledDBusUtils.pc.in UntitledDBusUtils.pc @ONLY)
