--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,13 +38,15 @@ jobs:
           git fetch --all
           git submodule update --remote --merge --init --recursive
           ver="${{ github.ref_name }}"
+          echo "out=untitled-dbus-utils-${ver:1}" >> $GITHUB_OUTPUT
+          
           sed -i "s/project(UntitledDBusUtils.*/project(UntitledDBusUtils VERSION ${ver:1})/g" CMakeLists.txt
           (git add . && git commit -m "Automatically bump version" && git push origin HEAD:master) || echo "Nothing to commit"
       - name: Create archive
         shell: bash
         run: |
           rm -rf .git/
-          tar cfJ untitled-dbus-utils.tar.xz . || echo "Might have failed"
+          tar cfJ ${{ steps.mod.outputs.out }}.tar.xz . --transform "s,^,${{ steps.mod.outputs.tag }}/," * || echo "Might have failed"
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
@@ -53,5 +55,5 @@ jobs:
             More on what is done this month can be found on the latest newsletter entry: https://madladsquad.com/#monthly-newsletter
           draft: false
           prerelease: false
-          files: untitled-dbus-utils.tar.xz
+          files: ${{ steps.mod.outputs.out }}.tar.xz
           generate_release_notes: false
