--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,7 +46,7 @@ jobs:
         shell: bash
         run: |
           rm -rf .git/
-          tar cfJ ${{ steps.mod.outputs.out }}.tar.xz . --transform "s,^,${{ steps.mod.outputs.tag }}/," * || echo "Might have failed"
+          tar cfJP ${{ steps.mod.outputs.out }}.tar.xz . --transform "s,^,${{ steps.mod.outputs.tag }}/," * || echo "Might have failed"
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
