--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,13 +40,18 @@ jobs:
           ver="${{ github.ref_name }}"
           echo "out=untitled-dbus-utils-${ver:1}" >> $GITHUB_OUTPUT
           
+          mkdir "untitled-dbus-utils-${ver:1}" >> $GITHUB_OUTPUT
+
           sed -i "s/project(UntitledDBusUtils.*/project(UntitledDBusUtils VERSION ${ver:1})/g" CMakeLists.txt
           (git add . && git commit -m "Automatically bump version" && git push origin HEAD:master) || echo "Nothing to commit"
+
+          rm -rf .git/
+          mv * untitled-dbus-utils-${ver:1}/ || echo "Errors in move"
+          mv .* untitled-dbus-tuils-${ver:1}/ || echo "Errors in move"
       - name: Create archive
         shell: bash
         run: |
-          rm -rf .git/
-          tar cfJP ${{ steps.mod.outputs.out }}.tar.xz . --transform "s,^,${{ steps.mod.outputs.tag }}/," * || echo "Might have failed"
+          tar cfJ ${{ steps.mod.outputs.out }}.tar.xz ${{ steps.mod.outputs.out }} || echo "Might have failed"
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
